--- a/products-detail.html
+++ b/products-detail.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <title>Document</title>
-    <link rel="stylesheet" href="style_products-detail.css">
+    <link rel="stylesheet" href="./styles/style_products-detail.css">
 </head>
 <body>
     <header>
